@@ -1,3 +1,11 @@
+Mon Mar  5 19:20:45 2001  Fuzz Master D <brunsch@uci.edu>
+
+        * bin/fuzz.pl:
+
+          As Ossama pointed out, the ACE_CHECK test was seeing 
+          problems in the tao_idl files since it has uses of ACE_TRY_ENV
+          inside quotes.  Made sure not to detect problems in this case.
+
 Mon Mar  5 18:58:32 2001  Fuzz Master D <brunsch@uci.edu>
 
         * bin/fuzz.pl:
